1999-11-07  Tom Tromey  <tromey@cygnus.com>

	* automake.in (SUFFIX_RULE_PATTERN): Add `0-9' as characters
	allowed in suffixes.  Fixes PR 22.  From Matthias Clasen.

1999-10-03  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	* m4/lispdir.m4: -batch must come before -q.
	* elisp-comp: Likewise.
	Reported by Lars Hecking <lhecking@nmrc.ucc.ie>
	* THANKS: Added Lars.

1999-08-15  Tom Tromey  <tromey@cygnus.com>

	* automake.in (get_object_extension): Fixed quoting bug.  Fixes
	ansi4.test.

1999-07-27  Tom Tromey  <tromey@cygnus.com>

	* config.guess, config.sub: New versions from autoconf.

1999-07-13  Tom Tromey  <tromey@cygnus.com>

	Work around losing `awk'.  Report from Harlan Stenn.
	* m4/init.m4 (AM_INIT_AUTOMAKE): Require AC_PROG_AWK.
	* tags.am (ID, TAGS): Use $(AWK), not `awk'.

	* automake.in (handle_source_transform): Mark prefix as seen if
	corresponding _SOURCES variable exists.  Fixes empty2.test.

1999-06-25  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* configure.in (ACLOCAL): Do not prepend the variable SRCDIR to
	m4.
	(AUTOMAKE): Set --amdir to current directory.

1999-06-20  Tom Tromey  <tromey@cygnus.com>

	* Makefile.am (TAGS_FILES): New macro.
	(ETAGS_ARGS): Moved files into TAGS_FILES.
	(TAGS_DEPENDENCIES): Likewise.
	(ETAGS_ARGS): Removed.
	(TAGS_DEPENDENCIES): Removed duplicate definition.

	* tags.am (ID): Handle VPATH correctly.  Use TAGS_FILES.  Report
	from Ganesan Rajagopal.
	(TAGS): Likewise.

1999-06-18  Thomas Tanner  <tanner@ffii.org>

	* automake.in (handle_ltlibraries): Check for -module in LDFLAGS,
	too.

1999-06-20 Mark Elbrecht <snowball3@bigfoot.com>

	* ylwrap: Handle filenames output by the DOS version of Bison.

1999-06-20  Tom Tromey  <tromey@cygnus.com>

	* ylwrap: Be less strict when recognizing DOS paths.  From Mark
	Elbrecht.

1999-06-19  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_dist_worker): Remove redundant entries from
	DIST_SUBDIRS.

	* automake.in (handle_lib_objects_cond): Better error message when