@@ -1,5 +1,8 @@
 1999-11-07  Tom Tromey  <tromey@cygnus.com>
 
+	* automake.in (PATH_PATTERN): Added `-' as allowable character.
+	Fixes PR automake/20.  From Matthew D. Langston.
+
 	* automake.in (SUFFIX_RULE_PATTERN): Add `0-9' as characters
 	allowed in suffixes.  Fixes PR 22.  From Matthias Clasen.
 
